--- a/functions/package.json
+++ b/functions/package.json
@@ -1,31 +1,43 @@
 {
   "name": "functions",
+  "description": "Cloud Functions for Firebase",
   "scripts": {
-    "lint": "eslint --ext .js,.ts .",
-    "build": "tsc",
-    "build:watch": "tsc --watch",
-    "serve": "npm run build && firebase emulators:start --only functions",
-    "shell": "npm run build && firebase functions:shell",
+    "lint": "eslint .",
+    "serve": "firebase emulators:start --only functions",
+    "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
+    "deploy:env": "firebase deploy --only functions --set-env-vars GOOGLE_GEN_AI_KEY=\"AIzaSyDifpYFdIeUX1YRaUV2K6Gwu0zMScl1fiQ\"",
     "logs": "firebase functions:log"
   },
   "engines": {
     "node": "22"
   },
-  "main": "lib/index.js",
+  "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1"
+    "@google-cloud/aiplatform": "^3.14.0",
+    "@google-cloud/dialogflow": "^6.3.1",
+    "@google-cloud/language": "^6.1.1",
+    "@google-cloud/secret-manager": "^5.0.1",
+    "@google-cloud/vertexai": "^0.4.0",
+    "@google/generative-ai": "^0.2.1",
+    "dotenv": "^16.4.5",
+    "email-sender": "^1.0.4",
+    "es6-promise-pool": "^2.5.0",
+    "express": "^4.18.2",
+    "firebase-admin": "^11.5.0",
+    "firebase-functions": "^6.3.2",
+    "google-auth-library": "^9.6.3",
+    "needle": "^3.2.0",
+    "socket.io": "^4.6.1",
+    "twitter-lite": "^1.1.0",
+    "youtube-transcript": "^1.2.1"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
-    "eslint": "^8.9.0",
+    "eslint": "^8.15.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-plugin-import": "^2.25.4",
-    "firebase-functions-test": "^3.1.0",
-    "typescript": "^5.7.3"
+    "firebase-functions-test": "^3.0.0",
+    "nodemon": "^2.0.22"
   },
   "private": true
 }
