--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.3.1",
     "@mui/lab": "^7.0.0-beta.16",
     "@mui/material": "^7.3.1",
+    "@mui/x-date-pickers": "^8.10.0",
     "@mui/x-tree-view": "^8.10.0",
     "firebase": "^12.1.0",
     "firebase-admin": "^13.4.0",
