--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@mui/material": "^7.3.1",
     "@mui/x-date-pickers": "^8.10.0",
     "@mui/x-tree-view": "^8.10.0",
+    "dotenv": "^17.2.1",
     "firebase": "^12.1.0",
     "firebase-admin": "^13.4.0",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-intersection-observer": "^9.16.0",
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
